# zotero_extractor

./: .gitignore  config.py  list_collections.py  main.py  output_test.csv  pyproject.toml
credentials/: .gitkeep
data/: .gitkeep
modules/: matcher.py  sheets_writer.py  sjr_processor.py  zotero_client.py
